# document-adapter

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
document_adapter/: __init__.py  base.py  docx_adapter.py  hwpx_adapter.py  mcp_server.py  pptx_adapter.py  tools.py
document_adapter/hwpx_core/: __init__.py  constants.py  grid.py  package.py  paragraph.py
examples/: claude_api_example.py  ollama_example.py
scripts/: demo_docx.py  demo_docx_merged_only.py  demo_fill_form.py  demo_quarterly_report.py  docx_merge_check.py  docx_regression.py  docx_scan.py  hwpx_core_sanity.py  hwpx_regression.py  make_docx_form_fixture.py  make_pptx_report_fixture.py  ollama_scenarios.py  phase4_inspect_form.py  phase4_viewer_check.py  poc_roundtrip.py  pptx_demo_check.py  pptx_demo_inspect.py  pptx_regression.py  pptx_scan.py  pptx_scenarios.py  strip_pptx_text.py
tests/: test_smoke.py
